# C-pico-projects

blink/: CMakeLists.txt  blink.c  compile_commands.json
lcd_screen/: CMakeLists.txt  lcd_screen.c
lcd_screen/Lcd/: CMakeLists.txt  lcd.c  lcd.h
lcd_screen_lib/: CMakeLists.txt  lcd_screen_lib.c
lcd_screen_lib/LCD/: CMakeLists.txt  lcd.c  lcd.h
library_test/: CMakeLists.txt  main.c
library_test/Lib/: CMakeLists.txt  lib.c  lib.h
